<resources>
    <string name="app_name">suitmedia mobile test</string>
    <string name="hint_name">Name</string>
    <string name="hint_palindrome">Palindrome</string>
    <string name="hint_next">Next</string>
    <string name="hint_check">Check</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="hint_choose_a_user">Choose a User</string>
    <string name="full_name">%s %s</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="retry">Try Again</string>
    <string name="no_users_found">No users found</string>
</resources>